tests/cases/attributes/errors/attribute-export-mangle-collision.ari
fn helper() -> i64 {
  return 1;
}

@export("_ARNv6helper")
fn collides() -> i64 {
  return 2;
}

fn main() -> i64 {
  return helper() + collides();
}
